edit portfolio item

--- a/index.html
+++ b/index.html
@@ -218,17 +218,17 @@
             >
           </div>
         </div>
-        <div class="juve-app portfolio-item">
+        <div class="movie-app portfolio-item">
           <img src="img/juveapp.png" class="image" />
           <div class="title">
             <p class="text">
-              Web App about Juventus, show matches, results,players etc. -
-              <br />Vue 3, Vuetify 3
+              Movie Preview App -
+              <br />React
             </p>
           </div>
           <div class="links">
             <a
-              href="https://github.com/maci-kb24/juve-vue-app"
+              href="https://github.com/maci-kb24/movie-react"
               target="_blank"
               style="
                 background-color: white;
@@ -240,7 +240,7 @@
               >Github</a
             >
             <a
-              href="https://juve-web-app.netlify.app/"
+              href="https://spiffy-jalebi-767d40.netlify.app/"
               target="_blank"
               style="
                 background-color: white;
