edit portfolio image

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
           </div>
         </div>
         <div class="movie-app portfolio-item">
-          <img src="img/juveapp.png" class="image" />
+          <img src="img/movie-app.png" class="image" />
           <div class="title">
             <p class="text">
               Movie Preview App -
