add portfolio item

--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
           <img src="img/fitness-calc-app.png" class="image" />
           <div class="title">
             <p class="text">
-              BMI Calculator using Fitness API, calculate BMI,body fat,calories
-              etc. - <br />Javascript, API
+              BMI Calculator 
+              <br />Javascript, API
             </p>
           </div>
           <div class="links">
@@ -218,17 +218,17 @@
             >
           </div>
         </div>
-        <div class="movie-app portfolio-item">
-          <img src="img/movie-app.png" class="image" />
+        <div class="juve-app portfolio-item">
+          <img src="img/juveapp.png" class="image" />
           <div class="title">
             <p class="text">
-              Movie Preview App -
-              <br />React
+              Juventus App -
+              <br />React, Material UI
             </p>
           </div>
           <div class="links">
             <a
-              href="https://github.com/maci-kb24/movie-react"
+              href="https://github.com/maci-kb24/juventus-app"
               target="_blank"
               style="
                 background-color: white;
@@ -240,7 +240,7 @@
               >Github</a
             >
             <a
-              href="https://marjan-movie-react.netlify.app/"
+              href="https://juveapp.netlify.app/"
               target="_blank"
               style="
                 background-color: white;
