update portfolio items

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <h1><span>My</span> Portfolio</h1>
       </div>
       <div class="portfolio-grid">
-        <div class="fitness-calc portfolio-item">
+        <!-- <div class="fitness-calc portfolio-item">
           <img src="img/fitness-calc-app.png" class="image" />
           <div class="title">
             <p class="text">
@@ -181,6 +181,41 @@
               Live site</a
             >
           </div>
+        </div> -->
+        <div class="fitness-calc hotel-booking portfolio-item">
+          <img src="img/hote-book.png" class="image" />
+          <div class="title">
+            <p class="text">
+              Hotel Booking 
+              <br />React
+            </p>
+          </div>
+          <div class="links">
+            <!-- <a
+              href="https://github.com/maci-kb24/fitness_calculator_api"
+              target="_blank"
+              style="
+                background-color: white;
+                color: black;
+                padding: 5px 10px;
+                border: none;
+                border-radius: 3px;
+              "
+              >Github</a> -->
+            <a
+              href="https://mukul-breach-resort-project.netlify.app/"
+              target="_blank"
+              style="
+                background-color: white;
+                color: black;
+                padding: 5px 10px;
+                border: none;
+                border-radius: 3px;
+              "
+            >
+              Live site</a
+            >
+          </div>
         </div>
         <div class="architecture portfolio-item">
           <img src="img/Architecture.webp" class="image" />
@@ -191,7 +226,7 @@
             </p>
           </div>
           <div class="links">
-            <a
+            <!-- <a
               href="https://github.com/maci-kb24/architecture_landing"
               target="_blank"
               style="
@@ -202,7 +237,7 @@
                 border-radius: 3px;
               "
               >Github</a
-            >
+            > -->
             <a
               href="https://architecture-landing.netlify.app/"
               target="_blank"
@@ -218,7 +253,7 @@
             >
           </div>
         </div>
-        <div class="juve-app portfolio-item">
+        <!-- <div class="juve-app portfolio-item">
           <img src="img/juveapp.png" class="image" />
           <div class="title">
             <p class="text">
@@ -252,6 +287,41 @@
               >Live Site</a
             >
           </div>
+        </div> -->
+        <div class="juve-app invoice-generator portfolio-item">
+          <img src="img/invoice-ge.png" class="image" />
+          <div class="title">
+            <p class="text">
+              invoice Generator App -
+              <br />React
+            </p>
+          </div>
+          <div class="links">
+            <!-- <a
+              href="https://github.com/maci-kb24/juventus-app"
+              target="_blank"
+              style="
+                background-color: white;
+                color: black;
+                padding: 5px 10px;
+                border: none;
+                border-radius: 3px;
+              "
+              >Github</a
+            > -->
+            <a
+              href="https://invoice-generator-react.netlify.app/"
+              target="_blank"
+              style="
+                background-color: white;
+                color: black;
+                padding: 5px 10px;
+                border: none;
+                border-radius: 3px;
+              "
+              >Live Site</a
+            >
+          </div>
         </div>
         <div class="nike-lp portfolio-item">
           <img src="img/rsz_nike-lp.png" class="image" />
@@ -259,7 +329,7 @@
             <p class="text">Nike Landing Page - React JS, Tailwind CSS</p>
           </div>
           <div class="links">
-            <a
+            <!-- <a
               href="https://github.com/maci-kb24/nike-landing"
               target="_blank"
               style="
@@ -270,7 +340,7 @@
                 border-radius: 3px;
               "
               >Github</a
-            >
+            > -->
             <a
               href="https://nike-lp.netlify.app/"
               target="_blank"
