edit portfolio item

--- a/index.html
+++ b/index.html
@@ -253,47 +253,12 @@
             >
           </div>
         </div>
-        <!-- <div class="juve-app portfolio-item">
+        <div class="juve-app portfolio-item">
           <img src="img/juveapp.png" class="image" />
           <div class="title">
             <p class="text">
               Juventus App -
               <br />React, Material UI
-            </p>
-          </div>
-          <div class="links">
-            <a
-              href="https://github.com/maci-kb24/juventus-app"
-              target="_blank"
-              style="
-                background-color: white;
-                color: black;
-                padding: 5px 10px;
-                border: none;
-                border-radius: 3px;
-              "
-              >Github</a
-            >
-            <a
-              href="https://juveapp.netlify.app/"
-              target="_blank"
-              style="
-                background-color: white;
-                color: black;
-                padding: 5px 10px;
-                border: none;
-                border-radius: 3px;
-              "
-              >Live Site</a
-            >
-          </div>
-        </div> -->
-        <div class="juve-app invoice-generator portfolio-item">
-          <img src="img/invoice-ge.png" class="image" />
-          <div class="title">
-            <p class="text">
-              invoice Generator App -
-              <br />React
             </p>
           </div>
           <div class="links">
@@ -310,7 +275,7 @@
               >Github</a
             > -->
             <a
-              href="https://invoice-generator-react.netlify.app/"
+              href="https://juveapp.netlify.app/"
               target="_blank"
               style="
                 background-color: white;
