edit technologies items

--- a/index.html
+++ b/index.html
@@ -109,33 +109,41 @@
           </div>
           <h2 class="technologies">Technologies</h2>
           <div class="logos">
-            <div class="html">
+            <div class="html tooltip">
               <figure><img src="img/html.png" /></figure>
+              <span class="tooltiptext">HTML</span>
             </div>
-            <div class="css">
+            <div class="css tooltip">
               <figure><img src="img/css.png" /></figure>
+              <span class="tooltiptext">CSS</span>
             </div>
-            <div class="javascript">
+            <div class="javascript tooltip">
               <figure><img src="img/javascript.png" /></figure>
+              <span class="tooltiptext">Javascript</span>
             </div>
             <!-- <div class="jquery"><figure><img src="img/jquery.jpg"></figure></div> -->
-            <div class="sass">
+            <div class="sass tooltip">
               <figure><img src="img/sass.png" /></figure>
+              <span class="tooltiptext">Sass</span>
             </div>
-            <div class="bootstrap">
+            <div class="bootstrap tooltip">
               <figure><img src="img/bootstrap.png" /></figure>
+              <span class="tooltiptext">Bootstrap</span>
             </div>
-            <div class="vite">
+            <div class="vite tooltip">
               <figure><img src="img/vite.png" /></figure>
+              <span class="tooltiptext">Vite</span>
             </div>
-            <div class="vue">
-              <figure><img src="img/vue.png" /></figure>
+            <div class="react tooltip">
+              <figure><img src="img/React.png" /></figure>
+              <span class="tooltiptext">React</span>
             </div>
-            <div class="vuetify">
+            <!-- <div class="vuetify">
               <figure><img src="img/vuetify.png" /></figure>
-            </div>
-            <div class="tailwind">
+            </div> -->
+            <div class="tailwind tooltip">
               <figure><img src="img/tailwind.png" /></figure>
+              <span class="tooltiptext">Tailwind</span>
             </div>
           </div>
         </div>
