update portfolio item

--- a/index.html
+++ b/index.html
@@ -190,17 +190,16 @@
             >
           </div>
         </div>
-        <div class="architecture portfolio-item">
-          <img src="img/Architecture.webp" class="image" />
+        <div class="imagecropper portfolio-item">
+          <img src="img/image_cropper.png" class="image" />
           <div class="title">
             <p class="text">
-              Architecture landing page - <br />Javascript, Splide( Typescript
-              carousel library)
+              Image Cropper App - <br /> React, Tailwind CSS
             </p>
           </div>
           <div class="links">
             <a
-              href="https://github.com/maci-kb24/architecture_landing"
+              href="https://github.com/maci-kb24/image-cropper"
               target="_blank"
               style="
                 background-color: white;
