update portfolio item link

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
               >Github</a
             >
             <a
-              href="https://architecture-landing.netlify.app/"
+              href="https://image-cropperapp.netlify.app/"
               target="_blank"
               style="
                 background-color: white;
