update portfolio item w/ njlawyers

--- a/index.html
+++ b/index.html
@@ -190,15 +190,15 @@
             >
           </div>
         </div>
-        <div class="imagecropper portfolio-item">
-          <img src="img/image_cropper.png" class="image" />
+        <div class=" njlawyers portfolio-item">
+          <img src="img/njlawyers.png" class="image" />
           <div class="title">
             <p class="text">
-              Image Cropper App - <br /> React, Tailwind CSS
+              NjLawyers - <br /> Wordpress
             </p>
           </div>
           <div class="links">
-            <a
+            <!-- <a
               href="https://github.com/maci-kb24/image-cropper"
               target="_blank"
               style="
@@ -208,10 +208,10 @@
                 border: none;
                 border-radius: 3px;
               "
-              >Github</a
+              >Github</a -->
             >
             <a
-              href="https://image-cropperapp.netlify.app/"
+              href="https://njlawyers.com.au"
               target="_blank"
               style="
                 background-color: white;
