update Google tag manager with GA4

--- a/index.html
+++ b/index.html
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Google tag (gtag.js) -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-3XRDPJ6WKG"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
+   <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-N18WRN7VJF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-      gtag("config", "G-3XRDPJ6WKG");
-    </script>
+  gtag('config', 'G-N18WRN7VJF');
+</script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -109,27 +104,26 @@
           </div>
           <h2 class="technologies">Technologies</h2>
           <div class="logos">
-            <div class="html tooltip">
+            <!-- <div class="html tooltip">
               <figure><img src="img/html.png" /></figure>
               <span class="tooltiptext">HTML</span>
-            </div>
-            <div class="css tooltip">
+            </div> -->
+            <!-- <div class="css tooltip">
               <figure><img src="img/css.png" /></figure>
               <span class="tooltiptext">CSS</span>
-            </div>
+            </div> -->
             <div class="javascript tooltip">
               <figure><img src="img/javascript.png" /></figure>
               <span class="tooltiptext">Javascript</span>
             </div>
-            <!-- <div class="jquery"><figure><img src="img/jquery.jpg"></figure></div> -->
-            <div class="sass tooltip">
+            <!-- <div class="sass tooltip">
               <figure><img src="img/sass.png" /></figure>
               <span class="tooltiptext">Sass</span>
-            </div>
-            <div class="bootstrap tooltip">
+            </div> -->
+            <!-- <div class="bootstrap tooltip">
               <figure><img src="img/bootstrap.png" /></figure>
               <span class="tooltiptext">Bootstrap</span>
-            </div>
+            </div> -->
             <div class="vite tooltip">
               <figure><img src="img/vite.png" /></figure>
               <span class="tooltiptext">Vite</span>
@@ -138,9 +132,6 @@
               <figure><img src="img/React.png" /></figure>
               <span class="tooltiptext">React</span>
             </div>
-            <!-- <div class="vuetify">
-              <figure><img src="img/vuetify.png" /></figure>
-            </div> -->
             <div class="tailwind tooltip">
               <figure><img src="img/tailwind.png" /></figure>
               <span class="tooltiptext">Tailwind</span>
@@ -209,7 +200,6 @@
                 border-radius: 3px;
               "
               >Github</a -->
-            >
             <a
               href="https://njlawyers.com.au"
               target="_blank"
